--- a/rnTaquin/package.json
+++ b/rnTaquin/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-jest": "^23.0.4",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.4"
   },
