--- a/rnTaquin/package.json
+++ b/rnTaquin/package.json
@@ -17,7 +17,8 @@
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
-    "react-native": "0.61.4"
+    "react-native": "0.61.4",
+    "react-native-modal": "^11.5.3"
   },
   "devDependencies": {
     "@babel/core": "7.7.2",
