--- a/rnTaquin/package.json
+++ b/rnTaquin/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-image-picker": "^1.1.0",
     "react-native-modal": "^11.5.3"
   },
   "devDependencies": {
