--- a/rnTaquin/package.json
+++ b/rnTaquin/package.json
@@ -19,7 +19,9 @@
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-image-picker": "^1.1.0",
-    "react-native-modal": "^11.5.3"
+    "react-native-modal": "^11.5.3",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.7.2",
