--- a/rnTaquin/package.json
+++ b/rnTaquin/package.json
@@ -18,8 +18,14 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-gesture-handler": "^1.5.2",
     "react-native-image-picker": "^1.1.0",
     "react-native-modal": "^11.5.3",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-simple-table": "0.0.3",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4"
   },
@@ -30,6 +36,7 @@
     "babel-jest": "24.9.0",
     "eslint": "^6.6.0",
     "jest": "24.9.0",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "0.56.3",
     "react-test-renderer": "16.9.0"
   },
