--- a/rnJwt/jwt/package.json
+++ b/rnJwt/jwt/package.json
@@ -15,6 +15,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-keychain": "^4.0.5",
     "react-native-safe-area-context": "^0.6.2",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15"
