--- a/rnJwt/jwt/package.json
+++ b/rnJwt/jwt/package.json
@@ -18,7 +18,8 @@
     "react-native-keychain": "^4.0.5",
     "react-native-safe-area-context": "^0.6.2",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15"
+    "react-navigation-stack": "^2.0.15",
+    "react-number-format": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.8.3",
